fixed > layout's sidebar overflow hide

--- a/src/Layout/Sidebar/Sidebar.module.scss
+++ b/src/Layout/Sidebar/Sidebar.module.scss
@@ -3,6 +3,8 @@
   height: 100vh;
   max-width: 45rem;
   overflow: hidden;
+  position: fixed;
+
 }
 .logoWrapper {
   text-align: center;
