--- a/src/style.css
+++ b/src/style.css
@@ -32,4 +32,5 @@ ul{
   width: 100%;
   background-color: #eee;
   padding: 2rem;
+  margin-left: 45rem;
 }
